fix usages